# agenteum-fin

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/linux/: agenteum-fin.service  install-service.sh  uninstall-service.sh
docs/: 260722-opencode-review-问财接口集成.md  a-stock-practical-experience.md  future-requirements-20260722.md  future-requirements.md  stock-f10-refactor-plan-20260723.md
docs/references/announcement-search/: SKILL.md
playground/: hk_fundamental_probe.py  iwencai_hk_kline_probe.py  iwencai_probe.py  provider_probe.py  provider_probe_results.json
src/: app.py  config.py  errors.py  provider_factory.py  schemas.py
src/api/: mcp_full.py
src/resources/: iwencai-query-guide.md  providers-capabilities.md  stock-tools-guide.md  tool_guides.py
src/services/: announcement_service.py  financial_statement_service.py  fundamental_metrics.py  fundamental_metrics_hk.py  iwencai_service.py  logging.py  research_report_service.py  retry.py  stock_f10_service.py  stock_fundamental_snapshot_service.py  stock_kline_service.py  stock_news_service.py  stock_profile_service.py
src/utils/: dates.py  http.py  symbols.py
tests/e2e/: test_claude_code_mcp.py  test_opencode_mcp.py
tests/fixtures/: cninfo_announcements.json  eastmoney_research_reports.json  iwencai_gateway_error.json  iwencai_query_empty.json  iwencai_query_finance.json  iwencai_search_news.json  sina_financial_report.json  tencent_quote.txt
tests/smoke/: test_iwencai_live.py  test_mcp_http.py
tests/unit/: test_config.py  test_errors.py  test_provider_factory.py  test_schemas.py
(+59 files in other folders)
