[project]
name = "agenteum-fin"
version = "0.1.0"
description = "HTTP-only MCP server for investment research data providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.27.1,<2",
  "mootdx>=0.11.7,<0.12",
  "pandas>=2.2,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "python-dotenv>=1,<2",
  "uvicorn[standard]>=0.34,<1",
]

# mootdx 0.11.x pins httpx>=0.25,<0.26, which conflicts with the MCP SDK's
# httpx>=0.28 requirement. mootdx only uses httpx for its HTTP server-list
# (bestip) fetch and works fine with httpx 0.28 (verified live with 0.28.1),
# so force-resolve httpx to our direct constraint.
[tool.uv]
override-dependencies = ["httpx>=0.28,<1"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project.scripts]
agenteum-fin = "src.app:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.resources" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# Third-party reference skill scripts vendored for contract lookup only.
exclude = ["docs/references"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
